--- a/v2/lecteurvue.ui
+++ b/v2/lecteurvue.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>lecteurvue</string>
+   <string>Lecteur de diaporama</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0">
